--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,129 +1,68 @@
-/*
-* Keyframes and Animations
-* image box-shadow animation
-*/
-
-@keyframes image_box-shadow {
-  0% {
-    box-shadow: 1px 1px 1px rgb(36, 35, 35);
-  }
-  100% {
-    box-shadow: 5px 5px 5px rgb(36, 35, 35);
-  }
-}
-
-body {
-  background-color: rgb(250, 235, 215);
-}
-
-.text {
+#main {
   display: flex;
-  flex-direction: column;
-  justify-items: right;
-  text-align: right;
-  width: 1000px;
-  margin: auto;
-  padding: 50px;
+  flex-direction: row;
+  width: 100vw;
+  height: 100vh;
 }
 
-.images {
-  width: 300px;
-  height: 300px;
-}
-.images:hover {
-  cursor: help;
-}
-
-#images-exception:hover {
-  cursor: pointer;
-}
-
-.images_long {
-  width: 300px;
-  height: 125px;
-}
-
-.image_stack {
-  display: flex;
-  flex-direction: column;
-  align-self: right;
-  justify-self: left;
-}
-
-.image_queue {
-  display: flex;
-}
-
-#image_queue_right {
-  justify-content: flex-end;
-}
-
-h1,
-li {
-  font-family: monospace;
-  font-weight: normal;
-  font-size: medium;
-}
-
-.sub_text {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  align-items: center;
-}
-
-#list {
-  display: flex;
-  justify-content: center;
-}
-
-.hyperlink,
-a {
+#menu {
+  position: fixed;
+  height: 100%;
+  width: 15%;
+  padding: 2%;
+  border-right: 5px solid rgb(206, 206, 206);
   text-align: center;
-  color: rgb(36, 35, 35);
+  background-color: #54471b;
 }
 
-table {
+#name {
+  height: 20%; 
   width: 100%;
+  padding-left: 2%;
+  margin-right: 5px;
+  object-fit: contain;
 }
 
-th {
-  font-family: monospace;
-  font-weight: 900;
+#menu a {
+  display: block;
+  margin: 10px 0;
+  text-decoration: none;
+  color: #e9cece;
 }
 
-td {
-  font-family: monospace;
-}
-
-#little_prince_body {
-  margin: auto;
+#body {
+  flex: 1;
+  margin-left: 15%; /* This accounts for the width of the fixed menu */
+  padding: 2%;
+  background-color: antiquewhite;
   text-align: center;
+  height: 300vh;
 }
 
-#little_prince_cont {
+/* Basic reset */
+body, html {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: antiquewhite;
+}
+
+.social{
+  height: 5vh;
+  width: 2.75vw;
+}
+
+.text-section{
+  padding-top: 40vh;
+}
+
+.work {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
+  flex-direction: row;
+  padding-left: 3vw;
+  padding-right: 3vw;
 }
 
-#lp_p {
-  width: 350px;
-  text-align: left;
-  word-wrap: normal;
-  margin: auto;
-}
-
-.underlined {
-  text-decoration: underline;
-}
-
-.orange_highlight {
-  background-color: orange;
-}
-
-.red_text {
-  color: red;
-  font-weight: bold;
-}
+/* #title {
+  padding-left: 15vh;
+} */
