--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -63,6 +63,26 @@ body, html {
   padding-right: 3vw;
 }
 
+#pportrait{
+  border-radius: 100%;
+  height: 15vh;
+  width: 8.25vw;
+  padding-right: 4vw;
+}
+
+#about_me{
+  display: flex;
+  flex-direction: row;
+  margin-right: 15vw;
+  margin-left: 15vw;
+}
+
+#about{
+  /* display: flex;
+  flex-direction: row; */
+  text-align: center;
+}
+
 /* #title {
   padding-left: 15vh;
 } */
