--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -56,11 +56,36 @@ body, html {
   padding-top: 40vh;
 }
 
-.work {
+#work{
+  text-align: center;
+}
+
+.d_work {
   display: flex;
   flex-direction: row;
-  padding-left: 3vw;
-  padding-right: 3vw;
+  text-align: center;
+  margin-left: 10vw;
+}
+
+#pico{
+  width: 20vw;
+  height: 20vh;
+}
+
+#explore{
+  width: 20vw;
+  height: 20vh;
+}
+
+#open {
+  width: 20vw;
+  height: 20vh;
+}
+
+#pico2025{
+  display: flex;
+  flex-direction: column;
+
 }
 
 #pportrait{
@@ -82,6 +107,43 @@ body, html {
   flex-direction: row; */
   text-align: center;
 }
+
+.image-container {
+  position: relative;
+  display: inline-block; /* or block, depending on your layout */
+}
+
+.image-container img {
+  display: block; /* Remove any default spacing below the image */
+  width: 100%; /* Make the image fill the container */
+  height: auto;
+}
+
+.image-container .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Adjust transparency as needed */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0; /* Hidden by default */
+  transition: opacity 0.3s ease; /* Smooth transition */
+}
+
+.image-container .text {
+  color: white;
+  font-size: 1.5em;
+  text-align: center;
+  padding: 10px;
+}
+
+.image-container:hover .overlay {
+  opacity: 1; /* Show on hover */
+}
+
 
 /* #title {
   padding-left: 15vh;
